docs/api/qiskit/1.0/qiskit.synthesis.unitary.aqc.FastCNOTUnitObjective.mdx
---
title: FastCNOTUnitObjective (v1.0)
description: API reference for qiskit.synthesis.unitary.aqc.FastCNOTUnitObjective in qiskit v1.0
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.synthesis.unitary.aqc.FastCNOTUnitObjective
---

# FastCNOTUnitObjective

<Class id="qiskit.synthesis.unitary.aqc.FastCNOTUnitObjective" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/synthesis/unitary/aqc/fast_gradient/fast_gradient.py#L33-L225" signature="qiskit.synthesis.unitary.aqc.FastCNOTUnitObjective(num_qubits, cnots)" modifiers="class">
  Bases: [`CNOTUnitObjective`](qiskit.synthesis.unitary.aqc.CNOTUnitObjective "qiskit.synthesis.unitary.aqc.cnot_unit_objective.CNOTUnitObjective")

  Implementation of objective function and gradient calculator, which is similar to `DefaultCNOTUnitObjective` but several times faster.

  **Parameters**

  *   **num\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) – number of qubits.
  *   **cnots** ([*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.26)")) – a CNOT structure to be used in the optimization procedure.

  ## Attributes

  ### num\_cnots

  <Attribute id="qiskit.synthesis.unitary.aqc.FastCNOTUnitObjective.num_cnots">
    Returns: A number of CNOT units to be used by the approximate circuit.
  </Attribute>

  ### num\_thetas

  <Attribute id="qiskit.synthesis.unitary.aqc.FastCNOTUnitObjective.num_thetas">
    Returns: Number of parameters (angles) of rotation gates in this circuit.
  </Attribute>

  ### target\_matrix

  <Attribute id="qiskit.synthesis.unitary.aqc.FastCNOTUnitObjective.target_matrix">
    Returns: a matrix being approximated
  </Attribute>

  ## Methods

  ### gradient

  <Function id="qiskit.synthesis.unitary.aqc.FastCNOTUnitObjective.gradient" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/synthesis/unitary/aqc/fast_gradient/fast_gradient.py#L104-L123" signature="gradient(param_values)">
    Computes the gradient of objective function. See description of the base class method.

    **Return type**

    [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.26)")
  </Function>

  ### objective

  <Function id="qiskit.synthesis.unitary.aqc.FastCNOTUnitObjective.objective" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/synthesis/unitary/aqc/fast_gradient/fast_gradient.py#L78-L102" signature="objective(param_values)">
    Computes the objective function and some intermediate data for the subsequent gradient computation. See description of the base class method.

    **Return type**

    [float](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")
  </Function>
</Class>

